--- a/design4green/home_page/templates/general/header_general.html
+++ b/design4green/home_page/templates/general/header_general.html
@@ -1,7 +1,8 @@
 {% load static %}
     <meta charset="utf-8">
     <link rel="icon" href="{% static '/images/logo.jpg' %}">
-
+	<link rel="shortcut icon" type="image/png" href="{% static '/images/logo.jpg' %}"/>
+	<link rel="shortcut icon" type="image/png" href="{% static '/images/logo.jpg' %}"/>
 
 
 
