--- a/design4green/home_page/templates/index/index.html
+++ b/design4green/home_page/templates/index/index.html
@@ -1,11 +1,1 @@
-
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>D4G</title>
-    </head>
-
-    <body>
-    <p>HELLLLLO</p>
-    </body>
-</html>
+aaaaa
