--- a/design4green/home_page/templates/index/index.html
+++ b/design4green/home_page/templates/index/index.html
@@ -4,7 +4,8 @@
     <head>
         <title>D4G</title>
         {% include "general/header_general.html" %}
-        <link rel="stylesheet" type="text/css" href="{% static "css/home_page_style.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static "css/home_page_style.css" %}"><link>
+        <script src="{% static "script/home_page_sc.js" %}"></script>
     </head>
 
     <body>
