--- a/design4green/home_page/templates/index/user_details.html
+++ b/design4green/home_page/templates/index/user_details.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
     <head>
-        <title>D4G</title>
+        <title>Your profile</title>
         {% include "general/header_general.html" %}
         <link rel="stylesheet" type="text/css" href="{% static "css/home_page_style.css" %}"><link>
         <script src="{% static "script/home_page_sc.js" %}"></script>
