--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -1,5 +1,24 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand font-weight-bold" href="#"
-    <img src="{% static '/images/logo_big.png' %}"   height="30" class="d-inline-block align-top" alt="SIDEM Logo">
+    <img src="{% static '/images/logo_big.png' %}" height="30" class="d-inline-block align-top" alt="SIDEM Logo">
     </a>
+
+
+
+    <ul class="navbar-nav my-2 my-sm-0">
+        <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link" href="#">Help</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Logout</a>
+        </li>
+    </ul>
+  </div>
+</nav>
