--- a/design4green/home_page/templates/general/header_general.html
+++ b/design4green/home_page/templates/general/header_general.html
@@ -9,3 +9,5 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 	<script src="https://unpkg.com/vue-chartjs/dist/vue-chartjs.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="{% static "topbar/style/topbar_style.css" %}"><link>
