--- a/design4green/home_page/static/topbar/style/topbar_style.css
+++ b/design4green/home_page/static/topbar/style/topbar_style.css
@@ -1,34 +1,6 @@
 a, a:hover, a:focus {
     color: inherit;
-    text-decoration: none;
+    text-decoration: bold;
     transition: all 0.3s;
 
-}
-
-
-.navbar {
-    padding: 5px 10px;
-    background: #fff;
-    border: none;
-    border-radius: 15px;
-    margin-top: 10px;
-    margin-bottom: 40px;
-    margin-left: 50px;
-    margin-right: 50px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.8);
-}
-
-.navbar-btn {
-    box-shadow: none;
-    outline: none !important;
-    border: none;
-    border-radius: 15px!important;
-    background: green;
-}
-
-.line {
-    width: 100%;
-    height: 1px;
-    border-bottom: 1px dashed #ddd;
-    margin: 40px 0;
 }
