--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand font-weight-bold" href="#"
+    <a class="navbar-brand font-weight-bold" href="#">
     <img src="{% static '/images/logo_big.png' %}" height="30" class="d-inline-block align-top" alt="SIDEM Logo">
     Notre APP name
     </a>
