--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -7,7 +7,7 @@
 
 
 
-    <ul class="navbar-nav my-2 my-sm-0">
+    <ul class="navbar-right my-2 my-sm-0">
         <li class="nav-item active">
             <a class="nav-link" href="#">Home</a>
         </li>
