--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -6,7 +6,7 @@
     </a>
 
 
-    <div class="navbar-right>"
+    <div class="navbar-right>">
         <ul class="navbar-nav my-2 my-sm-0">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home</a>
