--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -6,8 +6,8 @@
     </a>
 
 
-    <div class="navbar-right>">
-        <ul class="navbar-nav my-2 my-sm-0">
+   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home</a>
             </li>
