--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -5,7 +5,15 @@
     Notre APP name
     </a>
 
-
+     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <span class="navbar-text">
+            <p>Welcome : {{ user.u_id }}, You PW is: {{ user.u_mdp }}</p>
+        </span>
+      </li>
+     </ul>
+   </div>
    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
