--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -9,7 +9,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <span class="navbar-text">
-            <p>Welcome : {{ user.u_id }}, You PW is: {{ user.u_mdp }}</p>
+            <p>Welcome {{ user.u_id }}</p>
         </span>
       </li>
      </ul>
