--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -8,9 +8,7 @@
      <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <span class="navbar-text">
-            Welcome {{user.u_id}}
-        </span>
+        <span class="navbar-text">Welcome {{user.u_id}}</span>
       </li>
      </ul>
    </div>
