--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -5,12 +5,12 @@
     Notre APP name
     </a>
 
-     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-    <ul class="navbar-nav ">
-      <li class="nav-item">
-        <span class="navbar-text">Welcome {{user.u_id}}</span>
-      </li>
-     </ul>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ">
+          <li class="nav-item">
+            <span class="navbar-text">Welcome {{user.u_id}}</span>
+          </li>
+        </ul>
    </div>
    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
