--- a/design4green/home_page/static/topbar/style/topbar_style.css
+++ b/design4green/home_page/static/topbar/style/topbar_style.css
@@ -1,13 +1,6 @@
-a, a:hover, a:focus {
-    color: inherit;
-    text-decoration: bold;
-    transition: all 0.3s;
-}
-
-
 .navbar-text {color:black;}
 
 .nav>span {
-    display: block;
+    display: inline-block;
     white-space: nowrap;
 }
