--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -5,13 +5,14 @@
     Notre APP name
     </a>
 
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ">
+    <div class="navbar-collapse justify-content-center">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <span class="navbar-text">Welcome {{user.u_id}}</span>
           </li>
         </ul>
    </div>
+
    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
