--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -9,12 +9,20 @@
     </head>
 
     <body>
-      {% include "../topbar/topbar.html" %}
-
-
-
-
-
+        <div class="container">
+            {% include "../topbar/topbar.html" %}
+            <div class="row">
+                <div class="col-sm">
+                    One of three columns
+                </div>
+                <div class="col-sm">
+                    One of three columns
+                </div>
+                <div class="col-sm">
+                    One of three columns
+                </div>
+            </div>
+        </div>
     </body>
 
 </html>
