--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <div class="container">
+        <div class="container-fullwidth">
             {% include "../topbar/topbar.html" %}
             <div class="row">
                 <div class="col-sm">
