--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -11,6 +11,8 @@
     <body>
         <div class="container-fullwidth">
             {% include "../topbar/topbar.html" %}
+        </div>
+        <div class="container">
             <div class="row">
                 <div class="col-sm">
                     One of three columns
