--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -14,8 +14,14 @@
         </div>
         <div class="container">
             <div class="row">
+                    <div class="col-sm">
+                        <h3>Details about your account</h3>
+                    </div>
+            </div>
+
+            <div class="row">
                 <div class="col-sm">
-                    One of three columns
+                    Col1
                 </div>
                 <div class="col-sm">
                     One of three columns
