--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                     <div class="col-sm">
-                        <h3>Details about your account</h3>
+                        <h3 class="text-center">Details about your account</h3>
                     </div>
             </div>
 
