--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -7,90 +7,45 @@
     </head>
 
     <body>
-    <div>
-      <line-chart style="height: 100%"
-                  :chart-data="purpleLineChart.chartData"
-                  :gradient-color="purpleLineChart.gradientColors"
-                  :gradient-stops="purpleLineChart.gradientStops"
-                  :extra-options="purpleLineChart.extraOptions">
-      </line-chart>
-    </div>
+    <canvas id="myChart" width="400" height="400"></canvas>
     <script>
-    export default {
-      data() {
-        return {
-          purpleLineChart: {
-            extraOptions: {
-              maintainAspectRatio: false,
-                legend: {
-                  display: false
-                },
-              responsive: true,
-              tooltips: {
-                backgroundColor: '#f5f5f5',
-                titleFontColor: '#333',
-                bodyFontColor: '#666',
-                bodySpacing: 4,
-                xPadding: 12,
-                mode: "nearest",
-                intersect: 0,
-                position: "nearest"
-              },
-              scales: {
+    var ctx = document.getElementById('myChart').getContext('2d');
+    var myChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+            datasets: [{
+                label: '# of Votes',
+                data: [12, 19, 3, 5, 2, 3],
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
                 yAxes: [{
-                  barPercentage: 1.6,
-                  gridLines: {
-                    drawBorder: false,
-                    color: 'rgba(29,140,248,0.0)',
-                    zeroLineColor: "transparent",
-                  },
-                  ticks: {
-                    suggestedMin: 50,
-                    suggestedMax: 110,
-                    padding: 20,
-                    fontColor: "#ff8a76"
-                  }
-                }],
-
-                xAxes: [{
-                  barPercentage: 1.6,
-                  gridLines: {
-                    drawBorder: false,
-                    color: 'rgba(220,53,69,0.1)',
-                    zeroLineColor: "transparent",
-                  },
-                  ticks: {
-                    padding: 20,
-                    fontColor: "#ff8a76"
-                  }
+                    ticks: {
+                        beginAtZero: true
+                    }
                 }]
-              }
-
-
-            },
-            chartData: {
-              labels: ['JUL', 'AUG', 'SEP', 'OCT', 'NOV', 'DEC'],
-              datasets: [{
-                label: "Data",
-                fill: true,
-                borderColor: '#d048b6',
-                borderWidth: 2,
-                borderDash: [],
-                borderDashOffset: 0.0,
-                pointBackgroundColor: '#d048b6',
-                pointBorderColor: 'rgba(255,255,255,0)',
-                pointHoverBackgroundColor: '#d048b6',
-                pointBorderWidth: 20,
-                pointHoverRadius: 4,
-                pointHoverBorderWidth: 15,
-                pointRadius: 4,
-                data: [80, 100, 70, 80, 120, 80],
-              }]
             }
-          }
         }
-      }
-    }
+    });
     </script>
 
 
