--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -11,13 +11,16 @@
     <script>
     var ctx = document.getElementById('myChart').getContext('2d');
     var myChart = new Chart(ctx, {
-        type: 'bar',
+        type: 'line',
         data: {
-            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+            labels: ['Annee 1', 'Annee 2', 'Annee 3', 'Annee 4', 'Annee 5', 'Annee 6'],
             datasets: [{
-                label: '# of Votes',
+                xAxisID: 'Annee',
+                yAxisID: 'Consommation',
+                label: 'Consommation de X au cour de l'annee',
+                pointRadius: 30,
                 data: [12, 19, 3, 5, 2, 3],
-                backgroundColor: [
+                pointBackgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
                     'rgba(54, 162, 235, 0.2)',
                     'rgba(255, 206, 86, 0.2)',
@@ -25,7 +28,7 @@
                     'rgba(153, 102, 255, 0.2)',
                     'rgba(255, 159, 64, 0.2)'
                 ],
-                borderColor: [
+                pointBackgroundColor: [
                     'rgba(255, 99, 132, 1)',
                     'rgba(54, 162, 235, 1)',
                     'rgba(255, 206, 86, 1)',
@@ -33,7 +36,7 @@
                     'rgba(153, 102, 255, 1)',
                     'rgba(255, 159, 64, 1)'
                 ],
-                borderWidth: 1
+                pointBorderWidth: 1
             }]
         },
         options: {
