--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -17,7 +17,7 @@
             datasets: [{
                 xAxisID: 'Annee',
                 yAxisID: 'Consommation',
-                label: 'Consommation de X au cour de l'annee',
+                label: 'Consommation de X au cour de l\'annee',
                 pointRadius: 30,
                 data: [12, 19, 3, 5, 2, 3],
                 pointBackgroundColor: [
