--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -17,9 +17,25 @@
             datasets: [{
                 xAxisID: 'Annee',
                 yAxisID: 'Consommation',
-                label: 'Consommation de X au cour de l annee',
+                label: 'Consommation de X au cour de l\'annee',
                 pointRadius: 5,
                 borderDash: [12, 19, 3, 5, 2, 3],
+                pointBackgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                ],
+                pointBackgroundColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                ],
                 pointBorderWidth: 1
             }]
         },
