clean data line

--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -19,13 +19,7 @@
                 yAxisID: 'Consommation',
                 label: 'Consommation de X au cour de l\'annee',
                 pointRadius: 5,
-                data: [{ x: 10, y: 20 },
-                    { x: 15, y: 10 },
-                    { x: 30, y: 44 },
-                    { x: 3, y: 7 },
-                    { x: 67, y: 55 },
-                    { x: 23, y: 26 }
-                ],
+                data: [],
                 pointBackgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
                     'rgba(54, 162, 235, 0.2)',
