add 1 data line

--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -19,7 +19,7 @@
                 yAxisID: 'Consommation',
                 label: 'Consommation de X au cour de l\'annee',
                 pointRadius: 5,
-                data: [],
+                data: [20],
                 pointBackgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
                     'rgba(54, 162, 235, 0.2)',
