test debug line graph

--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -13,12 +13,12 @@
     var myChart = new Chart(ctx, {
         type: 'line',
         data: {
-            labels: ['Annee 1', 'Annee 2', 'Annee 3', 'Annee 4', 'Annee 5'],
+            labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
             datasets: [{
                 label: 'Consommation du logement X',
                 backgroundColor: 'rgb(71, 227, 32)',
                 borderColor: 'rgb(34, 116, 14)',
-                data: [0, 10, 26, 17, 30]
+                data: [0, 10, 5, 2, 20, 30, 45]
             }]
         },
         options: {}
