--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -7,7 +7,9 @@
     </head>
 
     <body>
-    <canvas id="myChart" width="400" height="400"></canvas>
+    <div class='col-sm-6'>
+        <canvas id="myChart" width="400" height="400"></canvas>
+    </div>
     <script>
     var ctx = document.getElementById('myChart').getContext('2d');
     var myChart = new Chart(ctx, {
