increase point size

--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -20,7 +20,8 @@
                 label: 'Consommation du logement X',
                 backgroundColor: 'rgb(71, 227, 32)',
                 borderColor: 'rgb(34, 116, 14)',
-                data: [0, 10, 26, 17, 30]
+                data: [0, 10, 26, 17, 30],
+                pointRadius: 20
             }]
         },
         options: {}
