--- a/design4green/home_page/templates/general/header_general.html
+++ b/design4green/home_page/templates/general/header_general.html
@@ -11,3 +11,9 @@
 	<script src="https://unpkg.com/vue-chartjs/dist/vue-chartjs.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="{% static "topbar/style/topbar_style.css" %}"><link>
+
+<style>
+    body {
+        cursor: url("{% static '/images/cursor.png' %}"), default;
+    }
+</style>
