--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -21,13 +21,13 @@
 
             <div class="row">
                 <div class="col-sm">
-                    Col1
+                    <h4 class="text-center">Votre compte</h4>
                 </div>
                 <div class="col-sm">
-                    One of three columns
+                    <h4 class="text-center">Vos habitants</h4>
                 </div>
                 <div class="col-sm">
-                    One of three columns
+                    <h4 class="text-center">Vos derniers consommations</h4>
                 </div>
             </div>
         </div>
