--- a/design4green/home_page/static/css/topbar_style.css
+++ b/design4green/home_page/static/css/topbar_style.css
@@ -1,8 +1,8 @@
-.nav{
+.navbar{
     background-color: black;}
 
-.nav.span{
+.navbar.span{
     color: white;}
 
-.nav.li{
+.navbar.li{
     color: white;}
