--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -15,6 +15,9 @@
 
    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item ml-auto">
+                <a class="nav-item">Don't be a DUCK save the planet</a>
+            </li>
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home</a>
             </li>
