--- a/design4green/home_page/static/topbar/style/topbar_style.css
+++ b/design4green/home_page/static/topbar/style/topbar_style.css
@@ -1,19 +1,14 @@
-.navbar-text {color:white;}
-
 .topbar>span {
     display: inline-block;
     white-space: nowrap;}
 
-.topbar { margin-bottom: 20px;}
-
-.topbar{
-    background-color: black;}
-
 .topbar {
+    margin-bottom: 20px;
+    color: black;
     -moz-box-shadow: 10px 10px 5px #888;
     -webkit-box-shadow: 10px 10px 5px #888;
-    box-shadow: 10px 10px 5px #888;
-}
+    box-shadow: 10px 10px 5px #888;}
+
 /*
 .navbar.span{
     color: white;}
