--- a/design4green/home_page/static/topbar/style/topbar_style.css
+++ b/design4green/home_page/static/topbar/style/topbar_style.css
@@ -4,17 +4,7 @@
 
 .topbar {
     margin-bottom: 20px;
-    color: black;
+    background-color: black;
     -moz-box-shadow: 10px 10px 5px #888;
     -webkit-box-shadow: 10px 10px 5px #888;
     box-shadow: 10px 10px 5px #888;}
-
-/*
-.navbar.span{
-    color: white;}
-
-.navbar.li{
-    color: white;}
-
-
- */
