--- a/design4green/home_page/templates/general/header_general.html
+++ b/design4green/home_page/templates/general/header_general.html
@@ -1,7 +1,7 @@
 {% load static %}
     <meta charset="utf-8">
-    <link rel="icon" href="{% static '/images/logo_big.png' %}">
-	<link rel="shortcut icon" type="image/png" href="{% static '/images/logo.jpg' %}"/>
+    <link rel="icon" href="{% static '/images/logo.png' %}">
+	<link rel="shortcut icon" type="image/png" href="{% static '/images/logo.png' %}"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
@@ -12,8 +12,8 @@
 
     <link rel="stylesheet" type="text/css" href="{% static "topbar/style/topbar_style.css" %}"><link>
 
-<style>
-    body {
-        cursor: url("{% static '/images/cursor.png' %}"), default;
-    }
-</style>
+    <style>
+        body {
+            cursor: url("{% static '/images/cursor.png' %}"), default;
+        }
+    </style>
