--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light topbar">
     <a class="navbar-brand font-weight-bold" href="#">
-    <img src="{% static '/images/logo_big.png' %}" height="30" class="d-inline-block align-top" alt="SIDEM Logo">
+    <img src="{% static '/images/logo.png' %}" height="30" class="d-inline-block align-top" alt="SIDEM Logo">
     Notre APP name
     </a>
 
