--- a/design4green/home_page/static/css/user_detail_style.css
+++ b/design4green/home_page/static/css/user_detail_style.css
@@ -1,3 +1,16 @@
 .ud-hello {
     margin-bottom: 50px;
 }
+
+ud-cp {
+
+}
+
+ud-hb{
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+ud-dc{
+
+}
