--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -21,13 +21,13 @@
             </div>
 
             <div class="row">
-                <div class="col-sm">
+                <div class="col-sm ud-cp">
                     <h4 class="text-center">Votre compte</h4>
                 </div>
-                <div class="col-sm">
+                <div class="col-sm ud-hb">
                     <h4 class="text-center">Vos habitants</h4>
                 </div>
-                <div class="col-sm">
+                <div class="col-sm ud-dc">
                     <h4 class="text-center">Vos derniers consommations</h4>
                 </div>
             </div>
