--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -29,6 +29,14 @@
                 </div>
                 <div class="col-sm ud-dc">
                     <h4 class="text-center">Vos derniers consommations</h4>
+                    <table class="table table-bordered table-striped table-hover table-sm">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th>Item</th>
+                            <th>Designation</th>
+                            <th>Description</th>
+                        </tr>
+                        </thead>
                 </div>
             </div>
         </div>
