--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -32,11 +32,17 @@
                     <table class="table table-bordered table-striped table-hover table-sm">
                         <thead class="thead-dark">
                         <tr>
-                            <th>Item</th>
-                            <th>Designation</th>
-                            <th>Description</th>
+                            <th>Date</th>
+                            <th>Consumation</th>
                         </tr>
                         </thead>
+                        <tbody id="myTable">
+                            <tr>
+                                <td>test1</td>
+                                <td>test2</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
