--- a/design4green/home_page/static/css/user_detail_style.css
+++ b/design4green/home_page/static/css/user_detail_style.css
@@ -5,14 +5,19 @@ h4{margin-bottom: 20px;}
 }
 
 ud-cp {
-
+    padding-right:20px;
+    border-right: 1px solid #ccc;
 }
 
 ud-hb{
     margin-right: 10px;
     margin-left: 10px;
+    padding-right:20px;
+    padding-left:20px;
+    border-right: 1px solid #ccc;
+
 }
 
 ud-dc{
-
+    padding-left:20px;
 }
