--- a/design4green/home_page/templates/index/index.html
+++ b/design4green/home_page/templates/index/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
 	<title>Login V3</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
-	
+	<link rel="stylesheet" type="text/css" href="{% static 'css/connection_icon.css' %}">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'css/connection_util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/connection.css' %}">
