--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -1,8 +1,8 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}
 <html>
     <head>
-        <title>D4G</title>
+        <title>Graph</title>
         {% include "general/header_general.html" %}
     </head>
 
