--- a/design4green/home_page/static/css/connection.css
+++ b/design4green/home_page/static/css/connection.css
@@ -21,6 +21,7 @@ margin-top: auto;
 margin-bottom: auto;
 width: 400px;
 background-color: rgba(0,0,0,0.5) !important;
+border-radius: 25px;
 }
 
 .social_icon span{
