--- a/design4green/home_page/static/css/connection.css
+++ b/design4green/home_page/static/css/connection.css
@@ -47,7 +47,7 @@ top: -45px;
 
 .input-group-prepend span{
 width: 50px;
-background-color: #FFC312;
+background-color: #A8D818;
 color: black;
 border:0 !important;
 }
