--- a/design4green/home_page/templates/index/index.html
+++ b/design4green/home_page/templates/index/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
 <head>
-    <title>Graph</title>
+    <title> - Connexion</title>
     {% include "general/header_general.html" %}
     <title>Login Page</title>
     <!--Made with love by Mutiullah Samim -->
@@ -15,7 +15,7 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
-                <h3>Sign In</h3>
+                <h3>Connexion</h3>
             </div>
             <div class="card-body">
                 <form>
@@ -23,23 +23,23 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="username">
+                        <input type="text" class="form-control" placeholder="nom d'utilisateur">
 
                     </div>
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
-                        <input type="password" class="form-control" placeholder="password">
+                        <input type="password" class="form-control" placeholder="mot de passe">
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Login" class="btn float-right login_btn">
+                        <input type="submit" value="Connexion" class="btn float-right login_btn">
                     </div>
                 </form>
             </div>
             <div class="card-footer">
                 <div class="d-flex justify-content-center">
-                    <a href="#">Forgot your password?</a>
+                    <a href="#">Mot de passe oublié?</a>
                 </div>
             </div>
         </div>
