--- a/design4green/home_page/templates/index/index.html
+++ b/design4green/home_page/templates/index/index.html
@@ -33,7 +33,7 @@
                         <input type="password" class="form-control" placeholder="mot de passe">
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Connexion" class="btn float-right login_btn">
+                        <input type="submit" value="Valider" class="btn float-right login_btn">
                     </div>
                 </form>
             </div>
