--- a/design4green/home_page/static/css/connection.css
+++ b/design4green/home_page/static/css/connection.css
@@ -22,6 +22,7 @@ margin-bottom: auto;
 width: 400px;
 background-color: rgba(0,0,0,0.5) !important;
 border-radius: 25px;
+border: 3px solid white;
 }
 
 .social_icon span{
