--- a/design4green/home_page/static/css/connection.css
+++ b/design4green/home_page/static/css/connection.css
@@ -22,7 +22,6 @@ margin-bottom: auto;
 width: 400px;
 background-color: rgba(0,0,0,0.5) !important;
 border-radius: 25px;
-border: 3px solid white;
 }
 
 .social_icon span{
@@ -89,3 +88,8 @@ color: white;
 .links a{
 margin-left: 4px;
 }
+
+a{
+	color: #A8D818;
+}
+
