--- a/design4green/home_page/templates/recovery/recovery.html
+++ b/design4green/home_page/templates/recovery/recovery.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
 <head>
-    <title>Connexion</title>
+    <title>Mot de passe oublié</title>
     {% include "general/header_general.html" %}
     <!--Made with love by Mutiullah Samim -->
 
@@ -22,24 +22,12 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="nom d'utilisateur">
-
-                    </div>
-                    <div class="input-group form-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fas fa-key"></i></span>
-                        </div>
-                        <input type="password" class="form-control" placeholder="mot de passe">
+                        <input type="text" class="form-control" placeholder="@">
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Valider" class="btn float-right login_btn">
+                        <input type="submit" value="Envoyer" class="btn float-right login_btn">
                     </div>
                 </form>
-            </div>
-            <div class="card-footer">
-                <div class="d-flex justify-content-center">
-                    <a href="{% url 'homePage:pass_forget' %}">Mot de passe oublié?</a>
-                </div>
             </div>
         </div>
     </div>
