--- a/design4green/home_page/templates/recovery/recovery.html
+++ b/design4green/home_page/templates/recovery/recovery.html
@@ -14,7 +14,7 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
-                <h3>Connexion</h3>
+                <h3>Mot de passe oublié ?</h3>
             </div>
             <div class="card-body">
                 <form>
