--- a/design4green/home_page/templates/recovery/recovery.html
+++ b/design4green/home_page/templates/recovery/recovery.html
@@ -8,6 +8,7 @@
 
     <!--Custom styles-->
     <link rel="stylesheet" type="text/css" href="{% static '/css/connection.css' %}">
+	<script src="{% static "script/recovery/recovery.js" %}"></script>
 </head>
 <body>
 <div class="container">
@@ -22,10 +23,10 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="@">
+                        <input id="mail" type="email" class="form-control" placeholder="@">
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Envoyer" class="btn float-right login_btn">
+                        <button id="btn_envoyer" type="button" value="Envoyer" class="btn float-right login_btn" disabled><a href="{% url 'homePage:pass_forget_request' %}"></a></button>
                     </div>
                 </form>
             </div>
