--- a/design4green/home_page/static/css/connection.css
+++ b/design4green/home_page/static/css/connection.css
@@ -89,11 +89,11 @@ color: white;
 margin-left: 4px;
 }
 
-a{
+a > button{
 	color: #A8D818;
 }
 
-a:hover{
+a:hover > button{
 	color: #94C418;
 }
 
