--- a/design4green/home_page/templates/index/index.html
+++ b/design4green/home_page/templates/index/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="card-footer">
                 <div class="d-flex justify-content-center">
-                    <a href="{% url 'homePage:pass_forget' %}">Mot de passe oublié?</a>
+                    <a class="links" href="{% url 'homePage:pass_forget' %}">Mot de passe oublié?</a>
                 </div>
             </div>
         </div>
