--- a/design4green/home_page/templates/recovery/recovery.html
+++ b/design4green/home_page/templates/recovery/recovery.html
@@ -26,7 +26,7 @@
                         <input id="mail" type="email" class="form-control" placeholder="@">
                     </div>
                     <div class="form-group">
-                        <button id="btn_envoyer" type="" class="btn float-right login_btn" disabled><a href="{% url 'homePage:pass_forget_request' %}">Envoyer</a></button>
+                        <button type="" class="btn float-right login_btn btn_envoyer" disabled><a class="btn_envoyer" href="{% url 'homePage:pass_forget_request' %}" disabled>Envoyer</a></button>
                     </div>
                 </form>
             </div>
