--- a/design4green/home_page/templates/index/index.html
+++ b/design4green/home_page/templates/index/index.html
@@ -7,7 +7,7 @@
     <!--Made with love by Mutiullah Samim -->
 
     <!--Custom styles-->
-    <link rel="stylesheet" type="text/css" href="{% static '/css/connection.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/default.css' %}">
 </head>
 <body>
 <div class="container">
