--- a/design4green/home_page/templates/recovery/recovery.html
+++ b/design4green/home_page/templates/recovery/recovery.html
@@ -18,12 +18,12 @@
                 <h3>Mot de passe oublié ?</h3>
             </div>
             <div class="card-body">
-                <form>
+                <form method="get" >
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input id="mail" type="email" class="form-control" placeholder="@">
+                        <input id="mail" name="mail" type="email" class="form-control" placeholder="@">
                     </div>
                     <div class="form-group">
                         <button id="btn_envoyer" type="" class="btn float-right login_btn" disabled>Envoyer</button>
