--- a/design4green/home_page/templates/recovery/recovery.html
+++ b/design4green/home_page/templates/recovery/recovery.html
@@ -18,6 +18,7 @@
                 <h3>Mot de passe oublié ?</h3>
             </div>
             <div class="card-body">
+				{{ mail }}
                 <form method="get" >
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
