--- a/design4green/home_page/templates/recovery/recovery.html
+++ b/design4green/home_page/templates/recovery/recovery.html
@@ -31,12 +31,12 @@
 						</div>
 					</form>
 					<form action="/" >
-						<button type="" class="btn float-right login_btn" disabled>Accueil</button>
+						<button type="" class="btn login_btn">Accueil</button>
 					</form>
 				{% else %}
 					<p>Mail envoyé à {{ mail }}</p>
 					<form action="/" >
-						<button type="" class="btn float-right login_btn" disabled>Accueil</button>
+						<button type="" class="btn login_btn">Accueil</button>
 					</form>
 				{% endif %}
             </div>
