--- a/design4green/home_page/templates/recovery/recovery.html
+++ b/design4green/home_page/templates/recovery/recovery.html
@@ -34,7 +34,7 @@
 						<button type="" class="btn login_btn">Accueil</button>
 					</form>
 				{% else %}
-					<p>Mail envoyé à {{ mail }}</p>
+					<p>Un nouveau mot de passe a été envoyé à {{ mail }}</p>
 					<form action="/" >
 						<button type="" class="btn login_btn">Accueil</button>
 					</form>
