--- a/design4green/home_page/templates/recovery/recovery.html
+++ b/design4green/home_page/templates/recovery/recovery.html
@@ -19,6 +19,10 @@
             </div>
             <div class="card-body">
 				{% if mail is None or mail == '' %}
+                    {% if mail == '' %}
+                        <p>Ce mail n'existe pas !</p>
+                    {% endif %}
+
 					<form method="get" >
 						<div class="input-group form-group">
 							<div class="input-group-prepend">
