--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -18,6 +18,8 @@
                     <div class="col-sm">
                         <h3 class="text-center">Details about your account</h3>
                     </div>
+                    Votre compte : user.u_id
+                    
             </div>
 
             <div class="row">
