--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
     <head>
-        <title>Your profile: {{ user.u_id }}</title>
+        <title>Votre profile: {{ user.u_id }}</title>
         {% include "general/header_general.html" %}
         <link rel="stylesheet" type="text/css" href="{% static "css/home_page_style.css" %}"><link>
         <link rel="stylesheet" type="text/css" href="{% static "css/user_detail_style.css" %}"><link>
@@ -25,12 +25,19 @@
                     <h4 class="text-center">Votre compte</h4>
                     <p>Votre compte : {{ user.u_id }}</p>
                 </div>
+
+
+
+
                 <div class="col-sm ud-hb">
-                    <h4 class="text-center">Vos habitants</h4>
+                    <h4 class="text-center">Vos contactes</h4>
                 </div>
+
+
+
                 <div class="col-sm ud-dc">
                     <h4 class="text-center">Vos derniers consommations</h4>
-                    <table class="table table-bordered table-striped table-hover table-sm">
+                    <table class="table table-responsive table-striped table-hover table-sm">
                         <thead class="thead-dark">
                         <tr>
                             <th>Date</th>
@@ -44,6 +51,10 @@
                             </tr>
                         </tbody>
                     </table>
+
+
+
+
                 </div>
             </div>
         </div>
