--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -37,7 +37,7 @@
 
                 <div class="col-sm ud-dc">
                     <h4 class="text-center">Vos derniers consommations</h4>
-                    <table class="table table-responsive table-hover">
+                    <table class="table table-hover">
                         <thead class="thead-dark">
                         <tr>
                             <th>Date</th>
