--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -38,7 +38,7 @@
                 <div class="col-sm ud-dc">
                     <h4 class="text-center">Vos derniers consommations</h4>
                     <table class="table table-hover">
-                        <thead class="thead-dark">
+                        <thead>
                         <tr>
                             <th>Date</th>
                             <th>Consumation</th>
