--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -26,7 +26,7 @@
                     <p>Votre compte : {{ user.u_id }}</p>
                 </div>
 
-
+                <hr class="hrvertical">
 
 
                 <div class="col-sm ud-hb">
