--- a/design4green/home_page/static/css/home_page_style.css
+++ b/design4green/home_page/static/css/home_page_style.css
@@ -16,3 +16,10 @@ hr:after {
     position: relative;
     top: -13px;
 }
+
+.hrvertical {
+    border:         none;
+    border-left:    1px solid hsla(200, 10%, 50%,100);
+    height:         100vh;
+    width:          1px;
+}
