--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark topbar">
     <a class="navbar-brand font-weight-bold" href="#">
     <img src="{% static '/images/logo_big.png' %}" height="30" class="d-inline-block align-top" alt="Logo">
-    Notre APP name
+    D4G Conso
     </a>
 
     <div class="navbar-collapse justify-content-center">
@@ -16,16 +16,16 @@
    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="#">Accueil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="about">Nous</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="#">Help</a>
+                <a class="nav-link" href="help">Aide</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Logout</a>
+                <a class="nav-link" href="#">Deconnexion</a>
             </li>
         </ul>
   </div>
