--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -33,7 +33,7 @@
                     <h4 class="text-center">Vos contactes</h4>
                 </div>
 
-
+                <hr class="hrvertical">
 
                 <div class="col-sm ud-dc">
                     <h4 class="text-center">Vos derniers consommations</h4>
