--- a/design4green/home_page/templates/about/about.html
+++ b/design4green/home_page/templates/about/about.html
@@ -22,12 +22,16 @@
             <div class="row">
                 <div class="col-sm ud-cp">
                     <br>
-                    <p>Nous sommes une petite équipe récemment créée, de base un groupe d'amis dévoué à la protection de la terre et à la préservation de mère nature.
+                    <p>Nous sommes une petite équipe récemment créée, à la base d'un groupe d'amis dévoué à la protection de la terre et à la préservation de mère nature.
 					<br>
 					Nos objectifs sont de luter contre le gaspillage, le réchauffement climatique et la polution !
 					Nous désirons partager nos connaissances et faire réaliser qu'un simple geste peut grandement prolonger notre terre et ses créatures.
+					<br><br>
+					Nous avons la firme intension de continuer dans cette voie et grandir pas à pas juqu'à devenir un pilier dans le domain Green
 					<br>
-					Nous avons la firme intension de continuer dans cette voie et grandir pas à pas juqu'à devenir un pilier dans le domain Green</p>
+					<br>
+					<h3><b>Design4Green 2019 - Team 11</b></h3>
+					</p>
 					<br>
 					<img src="{% static "images/logo_old.jpg" %}" alt="logo"/>
                 </div>
