--- a/design4green/home_page/templates/about/about.html
+++ b/design4green/home_page/templates/about/about.html
@@ -30,7 +30,7 @@
 					Nous avons la firme intension de continuer dans cette voie et grandir pas à pas juqu'à devenir un pilier dans le domain Green
 					<br>
 					<br>
-					<h3><b>Design4Green 2019 - Team 11</b></h3>
+					<h3><b><i>Design4Green 2019 - Team 11</i></b></h3>
 					</p>
 					<br>
 					<img src="{% static "images/logo_old.jpg" %}" alt="logo"/>
