--- a/design4green/home_page/templates/help/help.html
+++ b/design4green/home_page/templates/help/help.html
@@ -2,10 +2,9 @@
 {% load static %}
 <html>
     <head>
-        <title>Your profile: {{ user.u_id }}</title>
+        <title>Aide</title>
         {% include "general/header_general.html" %}
         <link rel="stylesheet" type="text/css" href="{% static "css/home_page_style.css" %}"><link>
-        <link rel="stylesheet" type="text/css" href="{% static "css/user_detail_style.css" %}"><link>
         <script src="{% static "script/home_page_sc.js" %}"></script>
     </head>
 
@@ -16,34 +15,19 @@
         <div class="container">
             <div class="row ud-hello">
                     <div class="col-sm">
-                        <h3 class="text-center">Details about your account</h3>
+                        <h3 class="text-center">Besoin d'une aide ?</h3>
                     </div>
             </div>
 
             <div class="row">
                 <div class="col-sm ud-cp">
-                    <h4 class="text-center">Votre compte</h4>
-                    <p>Votre compte : {{ user.u_id }}</p>
-                </div>
-                <div class="col-sm ud-hb">
-                    <h4 class="text-center">Vos habitants</h4>
-                </div>
-                <div class="col-sm ud-dc">
-                    <h4 class="text-center">Vos derniers consommations</h4>
-                    <table class="table table-bordered table-striped table-hover table-sm">
-                        <thead class="thead-dark">
-                        <tr>
-                            <th>Date</th>
-                            <th>Consumation</th>
-                        </tr>
-                        </thead>
-                        <tbody id="myTable">
-                            <tr>
-                                <td>test1</td>
-                                <td>test2</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <br>
+                    <p class="text-center">Vous rencontrez un problème ? Contacter nous !
+					<img src="{% static "images/icon_phone.png" %}" alt="phone"/> 06 76 86 96 06
+					<br>
+					<img src="{% static "images/icon_mail.png" %}" alt="mail"/> design4green.test@gmail.com
+					</p>
+					<br>
                 </div>
             </div>
         </div>
