--- a/design4green/home_page/templates/help/help.html
+++ b/design4green/home_page/templates/help/help.html
@@ -23,9 +23,12 @@
                 <div class="col-sm ud-cp">
                     <br>
                     <p class="text-center">Vous rencontrez un problème ? Contacter nous !
+					<br><br>
 					<img src="{% static "images/icon_phone.png" %}" alt="phone"/> 06 76 86 96 06
-					<br>
+					<br><br>
 					<img src="{% static "images/icon_mail.png" %}" alt="mail"/> design4green.test@gmail.com
+					<br><br>
+					Nous serons à votre dispositions dans les meilleurs délais possible.
 					</p>
 					<br>
                 </div>
