--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -32,7 +32,7 @@
 
 
                 <div class="col-sm ud-hb">
-                    <h4 class="text-center">Vos contactes</h4>
+                    <h4 class="text-center">Votre bien:</h4>
                 </div>
 
                 <hr class="hrvertical">
