--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -33,6 +33,7 @@
 
                 <div class="col-sm ud-hb">
                     <h4 class="text-center">Votre bien:</h4>
+                    <p>Ville: {{ uloc.l_ville }}</p>
                 </div>
 
                 <hr class="hrvertical">
