--- a/design4green/home_page/templates/about/about.html
+++ b/design4green/home_page/templates/about/about.html
@@ -28,12 +28,14 @@
 					Nous désirons partager nos connaissances et faire réaliser qu'un simple geste peut grandement prolonger notre terre et ses créatures.
 					<br><br>
 					Nous avons la firme intension de continuer dans cette voie et grandir pas à pas juqu'à devenir un pilier dans le domain Green
+					</p>
+					<div class="text-center">
 					<br>
 					<br>
 					<h3><b><i>Design4Green 2019 - Team 11</i></b></h3>
-					</p>
 					<br>
 					<img src="{% static "images/logo_old.jpg" %}" alt="logo"/>
+					</div>
                 </div>
             </div>
         </div>
