--- a/design4green/home_page/templates/topbar/topbar.html
+++ b/design4green/home_page/templates/topbar/topbar.html
@@ -19,10 +19,10 @@
                 <a class="nav-link" href="/{{ user.id }}">Accueil</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/{% url 'homePage:about' %}">Nous</a>
+                <a class="nav-link" href="{% url 'homePage:about' %}">Nous</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/{% url 'homePage:help' %}">Aide</a>
+                <a class="nav-link" href="{% url 'homePage:help' %}">Aide</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Deconnexion</a>
