--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -17,7 +17,7 @@
         data: {
             labels: ['Annee 1', 'Annee 2', 'Annee 3', 'Annee 4', 'Annee 5'],
             datasets: [{
-                backgroundColor: 'rgb(22, 180, 38)',
+                backgroundColor: 'rgba(22, 180, 38, 0.3)',
                 borderColor: 'rgb(34, 116, 14)',
                 data: [0, 10, 26, 17, 30],
                 pointRadius: 6
