--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -44,7 +44,7 @@
                         <thead>
                         <tr>
                             <th>Date</th>
-                            <th>Consumation</th>
+                            <th>Consommation</th>
                         </tr>
                         </thead>
                         <tbody id="myTable">
