--- a/design4green/home_page/templates/details/user_details.html
+++ b/design4green/home_page/templates/details/user_details.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row ud-hello">
                     <div class="col-sm">
-                        <h3 class="text-center">Details about your account</h3>
+                        <h3 class="text-center">Details sur votre compte</h3>
                     </div>
             </div>
             <hr>
