--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -7,6 +7,9 @@
     </head>
 
     <body>
+    <div class="container-fullwidth">
+        {% include "../topbar/topbar.html" %}
+    </div>
     <p>Ville: {{ uloc.l_ville }} - {{ uloc.l_cp }}</p>
     <p>Test {{ uconso.c_cons }}</p>
     <div class='col-sm-5'>
