--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -12,6 +12,16 @@
     </div>
     <p>Ville: {{ uloc.l_ville }} - {{ uloc.l_cp }}</p>
     <p>Test {{ uconso.c_cons }}</p>
+
+    <tbody id="myTable">
+    {% for item in all_conso %}
+        <tr>
+            <td>{{ item.c_date }}</td>
+            <td>{{ item.c_cons }}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+    
     <div class='col-sm-5'>
         <canvas id="myChart" width="400" height="400"></canvas>
     </div>
