--- a/design4green/home_page/templates/index/consommation.html
+++ b/design4green/home_page/templates/index/consommation.html
@@ -25,7 +25,7 @@
     </div>
     <script>
     var listData = [];
-    for each (v in all_conso) {
+    for each (v in {{ all_conso }}) {
         listData.append(v.c_date);
     }
     console.log(listData);
